# ttsi-project

./: .gitignore  .travis.yml  README.md  behave.ini  makefile  pyproject.toml  tox.ini
api_tests_exercises/: pyproject.toml
api_tests_exercises/features/: environment.py  login.feature  produtos.feature
api_tests_exercises/features/steps/: login.py  produtos.py
api_tests_exercises/helpers/: constants.py
api_tests_exercises/modules/: auxiliar.py
api_tests_exercises/tests/: scanapi.yml
e2e_tests/features/: create_product.feature  environment.py  login.feature
e2e_tests/features/steps/: create_product.py  login.py
e2e_tests/helpers/: utils.py
e2e_tests/modules/: add_product_page.py  login_page.py  product_list_page.py
e2e_tests/modules/po/: page_objects.py
e2e_tests/pages/: add_component_page.py  add_product_page.py  login_page.py  principal_page.py  product_list_page.py
reports/: TESTS-login.xml  TESTS-produtos.xml
unit_tests_exercises/: numbers.py
unit_tests_exercises/tests/unit/: test_numbers.py
