[tool.poetry]
name = "lojinha-api-tests"
version = "0.1.0"
description = ""
authors = ["Marcelo Leivas <marcelo.lleivas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
behave = "^1.2.6"
ipdb = "^0.13.4"
requests = "^2.24.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"